# fin-view

./: CMakeLists.txt  Makefile  README.md  finview
src/dirmon/: dirmon.cpp
src/filesearch/: filesearch.cpp
src/fileview/: fileview.cpp
